# p

./: .gitignore  BENCHMARK.md  DEMO.md  DEMO_ATTACK_README.md  DEMO_INSTRUCTIONS.md  INTEGRATION.md  OPENCLAW_PRISM_ADAPTER.md  PHASE2_CHECKLIST.md  PHASE2_SETUP.md  PRISM_Shield_Report.md  README.md  README_PHASE2.md  RUNBOOK.md  START_HERE.md  connect.ts  dashboard.html  demo.sh  demo_attack.sh  demo_phase2.py  eval_results.txt  unicode_defense.py
android/: WindowContextBridge.kt
android/openclaw-prism/: build.gradle.kts  settings.gradle.kts
data/: benchmark_results.jsonl  prism_synthetic_dataset.json
memshield/: demo_memshield.py  pyproject.toml
memshield/data/: memshield_audit.jsonl  memshield_quarantine.jsonl
memshield/src/memshield/: __init__.py  audit.py  authority.py  config.py  influence.py  progrank.py  provenance.py  ragmask.py  scorer.py  shadow.py  shield.py
memshield/tests/: test_memshield.py
prism_notify/: AndroidManifest.xml  build.sh  prism_notify.apk.idsig
scripts/: agent.py  agent_claude.py  agent_context.py  agent_prism.py  android_automation.py  context_assembler.py  convert_to_tflite.py  defended_device.py  demo_memshield.py  demo_prism_shield.py  doc_chunker.py  evaluate_model.py  export_onnx.py  generate_dataset.py  notification_listener.py  predict_prompt.py  prism_client.py  quantize_tinybert.py  run_benchmark.py  run_redteam_mutations.py  send_poison_notification.sh  shared_patterns.py  test_extractor.py  test_pipeline.py  train_tinybert.py  unicode_defense.py
tests/: test_agent_integration.py  test_sidecar.py
(+108 files in other folders)
