[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memshield"
version = "0.1.0"
description = "RAG poisoning defense for mobile AI agents"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
